@@ -2,6 +2,7 @@ Changes in @NEW@:
   o Client Changes:
     * cvc and conary now take -r to mean --root and -c to mean --config.
       Commands that take --info now take -i as an alternative.
+    * contexts may now override any configuration option. (CNY-812)
 
   o Build (cvc) Changes:
     * "cvc commit -m'commit message'" is now accepted.  Previously, a
